feat CURDについて超いい感じに抽象化して、memoryリソースの実装まで
